# seatools-starter-web-flask

./: .cookiecutter.json  .gitignore  LICENSE  README.md  build.bat  pyproject.toml
docs/: 版本说明.md
src/seatools/ioc/server/: app.py
src/seatools/ioc/starters/flask/: base.py
